--- a/src/main.css
+++ b/src/main.css
@@ -1,15 +1,71 @@
+
+html, body {
+	padding: 0;
+	margin: 0;
+	font-family: "Titillium Web", Arial, sans-serif;
+}
 .App {
   text-align: center;
 }
 
+#header {
+
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    font-family: "Titillium Web", Arial, sans-serif;
+    background: #2e7bcf url(../public/img/bg.jpg) 0 0 repeat-x;
+    border-bottom: 1px solid #275da1;
+
+}
+.header-title{
+	font-size: 3em;
+	color: #fff;
+	margin: 0.2em 0 0 0;
+}
+.header-subtitle {
+	font-size: 1.3em;
+	color: #78b8ff;
+}
+#side-nav{
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: 2;
+	width: 35%;
+}
+#graph-wrapper{
+}
+#main {
+	width: 65%;
+	margin-left: 35%;
+}
 #data-table {
-  border: 1px solid black;
+  border: 1px solid #444;
   border-collapse: collapse;
   border-spacing: 0px;
+  margin: 0.2em auto;
+  background-color: #fff;
 }
 #data-table tr td {
-  padding: 0;
+  margin: 0;
+  border-top: 1px solid #444;
+  border-right: 1px solid #444;
+}
+#data-table tr th {
+	background-color: #fff;
+    color: #000;
+    width: 5%;
 }
 #data-table tr td input {
   margin: 0;
+  border: none;
+  height: 100%;
+  width: 99%;
+  outline: none;
+}
+#ScatterChart {
+	margin-top: 0.2em;
+	width: 100%;
+	max-width: 700px;
+	height: 400px;
 }
