--- a/src/main.css
+++ b/src/main.css
@@ -5,26 +5,44 @@ html, body {
 	font-family: "Titillium Web", Arial, sans-serif;
 }
 .App {
-  text-align: center;
+}
+#data-table-header{
+	padding-top: 0.5em;
+	padding-bottom: 0.5em;
+	margin: 0;
+	font-family: "Titillium Web", Arial, sans-serif;
+	background-color: #78b8ff;
+	border-bottom: 1px solid #275da1;
+}
+ .header-title {
+	margin: 0;
+	padding: 0;
+	margin-left: 2%;
+	color: #fff;
+}
+.header-subtitle {
+	margin: 0;
+	padding: 0 0 0.5em 0 ;
+	color: #b9daff;
+	margin-left: 2%;
 }
 
 #header {
-
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
-    font-family: "Titillium Web", Arial, sans-serif;
-    background: #2e7bcf url(../public/img/bg.jpg) 0 0 repeat-x;
-    border-bottom: 1px solid #275da1;
-
+	padding-top: 0.5em;
+	padding-bottom: 0.5em;
+	font-family: "Titillium Web", Arial, sans-serif;
+	background: #2e7bcf url(../public/img/bg.jpg) 0 0 repeat-x;
+	border-bottom: 1px solid #275da1;
 }
-.header-title{
-	font-size: 3em;
-	color: #fff;
-	margin: 0.2em 0 0 0;
-}
-.header-subtitle {
-	font-size: 1.3em;
+
+#header .header-subtitle {
 	color: #78b8ff;
+}
+.header-built-with{
+	position: absolute;
+    top: 60px;
+    right: 5px;
+    color: #78b8ff;
 }
 #side-nav{
 	position: absolute;
@@ -32,6 +50,7 @@ html, body {
 	top: 0;
 	z-index: 2;
 	width: 35%;
+	border-right: 1px solid #444;
 }
 #graph-wrapper{
 }
@@ -40,32 +59,166 @@ html, body {
 	margin-left: 35%;
 }
 #data-table {
-  border: 1px solid #444;
-  border-collapse: collapse;
-  border-spacing: 0px;
-  margin: 0.2em auto;
-  background-color: #fff;
+	border: none;
+	border-collapse: collapse;
+	border-spacing: 0px;
+	margin: 0;
+	background-color: #fff;
 }
 #data-table tr td {
-  margin: 0;
-  border-top: 1px solid #444;
-  border-right: 1px solid #444;
+	margin: 0;
+	border-top: 1px solid #444;
+	border-right: 1px solid #444;
 }
 #data-table tr th {
 	background-color: #fff;
-    color: #000;
-    width: 5%;
+	color: #000;
+	width: 5%;
 }
 #data-table tr td input {
-  margin: 0;
-  border: none;
-  height: 100%;
-  width: 99%;
-  outline: none;
+	margin: 0;
+	border: none;
+	height: 100%;
+	width: 99%;
+	outline: none;
 }
 #ScatterChart {
 	margin-top: 0.2em;
-	width: 100%;
-	max-width: 700px;
-	height: 400px;
 }
+/* flow text */
+.flow-text {
+    font-weight: 300
+}
+
+@media only screen and (min-width: 360px) {
+    .flow-text {
+        font-size:1.2rem
+    }
+}
+
+@media only screen and (min-width: 390px) {
+    .flow-text {
+        font-size:1.224rem
+    }
+}
+
+@media only screen and (min-width: 420px) {
+    .flow-text {
+        font-size:1.248rem
+    }
+}
+
+@media only screen and (min-width: 450px) {
+    .flow-text {
+        font-size:1.272rem
+    }
+}
+
+@media only screen and (min-width: 480px) {
+    .flow-text {
+        font-size:1.296rem
+    }
+}
+
+@media only screen and (min-width: 510px) {
+    .flow-text {
+        font-size:1.32rem
+    }
+}
+
+@media only screen and (min-width: 540px) {
+    .flow-text {
+        font-size:1.344rem
+    }
+}
+
+@media only screen and (min-width: 570px) {
+    .flow-text {
+        font-size:1.368rem
+    }
+}
+
+@media only screen and (min-width: 600px) {
+    .flow-text {
+        font-size:1.392rem
+    }
+}
+
+@media only screen and (min-width: 630px) {
+    .flow-text {
+        font-size:1.416rem
+    }
+}
+
+@media only screen and (min-width: 660px) {
+    .flow-text {
+        font-size:1.44rem
+    }
+}
+
+@media only screen and (min-width: 690px) {
+    .flow-text {
+        font-size:1.464rem
+    }
+}
+
+@media only screen and (min-width: 720px) {
+    .flow-text {
+        font-size:1.488rem
+    }
+}
+
+@media only screen and (min-width: 750px) {
+    .flow-text {
+        font-size:1.512rem
+    }
+}
+
+@media only screen and (min-width: 780px) {
+    .flow-text {
+        font-size:1.536rem
+    }
+}
+
+@media only screen and (min-width: 810px) {
+    .flow-text {
+        font-size:1.56rem
+    }
+}
+
+@media only screen and (min-width: 840px) {
+    .flow-text {
+        font-size:1.584rem
+    }
+}
+
+@media only screen and (min-width: 870px) {
+    .flow-text {
+        font-size:1.608rem
+    }
+}
+
+@media only screen and (min-width: 900px) {
+    .flow-text {
+        font-size:1.632rem
+    }
+}
+
+@media only screen and (min-width: 930px) {
+    .flow-text {
+        font-size:1.656rem
+    }
+}
+
+@media only screen and (min-width: 960px) {
+    .flow-text {
+        font-size:1.68rem
+    }
+}
+
+@media only screen and (max-width: 360px) {
+    .flow-text {
+        font-size:1.2rem
+    }
+}
+
